ついでに08のMacroもマクロに置換

--- a/08-cli-development/content.adoc
+++ b/08-cli-development/content.adoc
@@ -593,7 +593,7 @@ pre_foo pre_bar pre_baz
 include::./projects/myecho_admiral/src/myecho_admiral.cr[]
 ----
 
-行数が少ないですね。`help` と `version` の定義が Macro １行で書かれています。こういった DSL を提供しやすいのも Macro の強みです。構造もわかりやすく、読みやすいと思います。もちろん、サブコマンドも対応しています。
+行数が少ないですね。`help` と `version` はマクロで1行で書かれています。こういった DSL を提供しやすいのもマクロの強みです。構造もわかりやすく、読みやすいと思います。もちろん、サブコマンドも対応しています。
 
 実際に実行すると次のようになります。
 
