指摘された部分を修正
https://github.com/crystal-jp/introducing-crystal/pull/45#discussion_r216900728
https://github.com/crystal-jp/introducing-crystal/pull/45#discussion_r216900783
https://github.com/crystal-jp/introducing-crystal/pull/45#discussion_r216901316

--- a/04-macro/content.adoc
+++ b/04-macro/content.adoc
@@ -375,9 +375,7 @@ include::./examples/syntax/nested_macros.cr[tags=code;main]
 
 ==== 生成コードの注意点
 
-マクロで生成するコードは、それ単体で Crystal のコードとして完結していなければなりません。言い替えれば、 生成されたコードを別のファイルに書き出して正しくパースされるようなコードでなければなりません。
-この制約は忘れてしまいがちなので気をつけましょう。
-次の例を見てください。
+マクロで生成するコードは、それ単体で Crystal のコードとして完結していなければなりません。言い替えれば、 生成されたコードを別のファイルに書き出して正しくパースされるようなコードでなければなりません。この制約は忘れてしまいがちなので気をつけましょう。次の例を見てください。
 
 [source,crystal,indent=0]
 ----
@@ -400,8 +398,7 @@ end
 include::./examples/syntax/pitfalls_begin_end.cr[tags=code;main]
 ----
 
-こうすることで、マクロが生成するコードが正しい Crystal のコードとなるため、コンパイルが通るようになります。
-陥りやすい間違いなので気をつけてください。
+こうすることで、マクロが生成するコードが正しい Crystal のコードとなるため、コンパイルが通るようになります。陥りやすい間違いなので気をつけてください。
 
 ==== 型の情報にアクセスできる `@type`
 
@@ -508,7 +505,7 @@ expansion 1:
 
 `__temp_20` のような変数に置き換わっています。このように、マクロの実行フェーズで変数名を置き換えています。
 
-また、ループと fresh variables をは `Hash` のような構文もあります。`%変数名{キー}` と書きます。次の例を見てください。
+また、fresh variables には `Hash` のような構文もあります。`%変数名{キー}` と書きます。次の例を見てください。
 
 [source,crystal,indent=0]
 ----
