「躓く」がフォントに収録されておらず表示できていなかったので平仮名に修正

--- a/05-shards/content.adoc
+++ b/05-shards/content.adoc
@@ -20,7 +20,7 @@ RubyGems と Shards の大きな違いは、パッケージのインストール
 
 ==== プロジェクトの機能と名前を決める
 
-前述の通り、Shards では導入パッケージの管理をプロジェクト単位でおこなうため、なにはともあれそのプロジェクトで実現したい機能とプロジェクトの名前を決めなければいけません。とはいえ、通常はやりたいことがあってプログラムを書き始めるはずですので、この辺りで躓くこともそうないとは思います。
+前述の通り、Shards では導入パッケージの管理をプロジェクト単位でおこなうため、なにはともあれそのプロジェクトで実現したい機能とプロジェクトの名前を決めなければいけません。とはいえ、通常はやりたいことがあってプログラムを書き始めるはずですので、この辺りでつまずくこともそうないとは思います。
 
 というわけで、実用的かどうかはさておき、ページタイトルと本文をパラメータとして受け取って最低限の HTML ソースを出力する、というだけのシンプルなコマンドラインツールを作ってみることにしましょう。
 
