文章の更新

--- a/01-introduction/content.adoc
+++ b/01-introduction/content.adoc
@@ -1,6 +1,8 @@
-== はじめに
+= はじめに
 
 著者: 5t111111
+
+// tag::body[]
 
 この本はプログラミング言語 Crystal の入門書です。おそらくまとまった一冊の書籍としては世界初の初心者向け Crystal 本になっています。
 
@@ -26,7 +28,7 @@ include::./examples/very_basic_http_server.cr[tags=code]
 
 ここから、その Crystal の特徴を簡単にお伝えしていきます。
 
-=== コンパイラ言語 Crystal
+== コンパイラ言語 Crystal
 
 Crystal の処理系はコンパイラとして提供されます。このことはつまり、Crystal のプログラムを実行するには、Crystal コンパイラでソースコードをコンパイルし実行ファイルを生成する必要があることを示しています。これは類似したシンタックスを持つ Ruby がコンパイル不要なインタプリタ型言語として作られていることとは対照的です。
 
@@ -37,7 +39,7 @@ Crystal はコンパイラ型の言語となっていることで、実行時速
 また、コンパイルすることで直接実行できるファイルが生成されるので、実行する環境に処理系を用意する必要がなくアプリケーションのデプロイが容易なことも利点の1つです。なお、本書では詳細には触れませんが、Crystal はコンパイラ基盤に LLVM を利用しており、各プラットフォームに最適化した実行ファイルの生成が可能になっています。
 
 [suppress='InvalidSymbol']
-=== Crystal の型システム
+== Crystal の型システム
 
 Crystal は静的型付けのプログラミング言語です。これも、動的型付け言語の Ruby とは異なった Crystal の大きな特徴です。
 
@@ -59,7 +61,7 @@ include::./examples/type_system.cr[tags=code]
 
 を代入し、`foo` の型と `shout(foo)` の型を `typeof` によって調査するものです。`shout` メソッドの中では、引数として渡されたデータを `to_s` と `upcase` というメソッドによって大文字の文字列に変換しています。このとき、 `String` も `Int32` もどちらも `to_s` という文字列変換メソッドを持っていることがコンパイラによって正しく推論されるため、型を指定していなくてもエラーにはなりません。続いて `typeof` の結果を見てみましょう。`foo` の型は実行時まで `String` か `Int32` かが判定できないために両方の複合型（ユニオン型）になっています。一方、 `shout(foo)` は戻り値の型から `String` だということが保証されるため、その型も `String` として正しく推論されていることがわかります。
 
-=== Null 安全性
+== Null 安全性
 
 「 Null 参照によるエラーの損害は10億ドル相当だ」という有名な言葉を聞いたことがある人は多いと思います。
 
@@ -94,7 +96,7 @@ puts my_string.upcase
 
 このようにして、Crystal では Null 安全性を保証しており、また、Null でない場合だけに実行する処理の記述なども書きやすい設計となっています。
 
-=== マクロ
+== マクロ
 
 先述したように、Crystal は静的型付けのコンパイラ言語であり、それによって安全なプログラムの構築が可能になっています。その一方で Ruby のような動的型付け言語が得意な「実行時にプログラムの動作を変える」こと、いわゆるメタプログラミングや実行時リフレクションといったテクニックは制限されます。
 
@@ -102,23 +104,23 @@ puts my_string.upcase
 
 マクロについては後の章で詳しく触れます。
 
-=== Crystal の並行処理
+== Crystal の並行処理
 
 現在のプログラミングにおける大きな変化として、並行処理や並列処理が高い注目を集めるようになったことがあげられるでしょう。進化した並列処理の機構を特徴とする Rust や Go 言語、そして非同期処理によってシェアを伸ばした Node.js を見ても、プログラミング言語に並行処理は欠かせないものとなっています。
 
 本書では大きく触れませんが、Crystal では、ノン・プリエンプティブな軽量スレッドを使った並行処理が可能になっており、それをファイバーと呼んでいます。ファイバー間におけるデータのやり取りには Go 言語や Clojure のようにチャンネルを利用し、共有メモリやロックを意識しなくても使いやすいように設計されています。
 
-=== C バインディング
+== C バインディング
 
 本書の範囲を超えてしまうので詳細は触れませんが、Crystal は C 言語ライブラリのバインディングを書きやすいので、C 言語の資産を Crystal から利用することも難しくありません。
 
-=== パッケージ管理
+== パッケージ管理
 
 現代的なプログラミングでは OSS などで提供されるライブラリをいくつも利用することがごく一般的ですが、数が多くなってくるとその依存関係を管理するのがとても大変になります。したがって、パッケージングのシステムがあるかどうかはプログラミング言語の利用しやすさにおいて大きな位置を占めています。
 
 Crystal には Shards というパッケージ管理のシステムがあります。この Shards についても後の章で詳しく触れます。
 
-=== Crystal のコミュニティ
+== Crystal のコミュニティ
 
 プログラミング言語を使うときには、その言語自体の仕様はもちろんですが、その言語コミュニティが充実していることも同じくらい大事ですよね。ここでは、Crystal のコミュニティや公式の一次情報を得るためのサイトを紹介します。
 
@@ -149,10 +151,12 @@ Crystal-JP の Slack（日本語） :: http://crystal.pine.moe
 
 また、Crystal のライブラリなどを探したい場合には https://github.com/veelenga/awesome-crystal[Awesome Crystal] や https://crystalshards.xyz[CrystalShards] が参考になるでしょう。
 
-=== まとめ
+== まとめ
 
 本章では、Crystal の特徴を簡単に説明しました。Crystal がどのようにして「 C 言語のように速く、Ruby の書き味を持つ」ということを実現しているかの概要だけでも把握していただき、Crystal の魅力を感じていただけたら幸いです。
 
 次の章からはより実践的な Crystal のプログラミングについて説明していきます。
 
 最後になりますが、本書で利用している Crystal のバージョンは執筆時点で最新の `0.26.1` です。異なるバージョンの Crystal では掲載されているプログラムが期待通りに動作しない可能性もあります。予めご了承ください。
+
+// end::body[]
