--- a/index.adoc
+++ b/index.adoc
@@ -10,6 +10,8 @@ crystal-jp (5t111111; arcage; at-grandpa; MakeNowJust; msky026)
 :hardbreaks:
 :prewrap!:
 :data-uri:
+:leveloffset: +1
+:imagesdir: docs/assets/images
 
 include::./01-introduction/content.adoc[]
 
@@ -21,10 +23,6 @@ include::./04-macro/content.adoc[]
 
 include::./05-shards/content.adoc[]
 
-// include::./06-tools/content.adoc[]
+include::./06-web-development/content.adoc[]
 
-include::./07-web-development/content.adoc[]
-
-include::./08-cli-development/content.adoc[]
-
-// include::./09-history/content.adoc[]
+include::./07-cli-development/content.adoc[]
