--- a/04-macro/content.adoc
+++ b/04-macro/content.adoc
@@ -171,6 +171,16 @@ include::./projects/macro/src/parallel.cr[tags=main]
 
 実行された時刻を見ると、並行に実行されていることがわかります。また、返り値も適切に受け取っていることがわかります。このように、 `parallel` を使えば簡単に並行処理を記述できます。
 
+[suppress='InvalidSymbol']
+==== `p!`, `pp!`
+
+`p` や `pp` と同じく、引数として渡された値を標準出力に出力しますが、渡された式自身も表示してくれます。デバッグ時に重宝します。
+
+[source,crystal]
+----
+include::./examples/pp_exp.cr[]
+----
+
 　
 
 いかがでしたでしょうか。いくつかのマクロを紹介しましたが、この他にも標準のマクロは存在します。興味のある方は探してみてください。今までのコードがずっとすっきりするはずです。
