--- a/index.adoc
+++ b/index.adoc
@@ -1,5 +1,5 @@
 = 入門 Crystal
-Crystal-JP (5t111111; arcage; at-grandpa; MakeNowJust; msky026)
+Crystal-JP (5t111111; AKJ; @at_grandpa; MakeNowJust; msky026)
 :lang: ja
 :doctype: book
 :pdf-page-size: b5
