03の例を追加

--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -242,7 +242,10 @@ Crystal ではインスタンス変数・クラス変数の型がコンパイル
 
 また、メソッドの引数名としてインスタンス変数を指定すると、メソッドの呼び出しと同時に、そのインスタンス変数に代入することができます。
 
-// TODO: 例
+[source,crystal]
+----
+include::./examples/infer_ivar.cr[tag=file]
+----
 
 === `struct`
 
@@ -259,9 +262,14 @@ Crystal ではインスタンス変数・クラス変数の型がコンパイル
 Crystal には `enum` があります。
 これは連番の数値型に分かりやすい名前を付けたもので、さらにメソッドを定義することもできます。
 
-また、 `@[Flags]` 属性を付けると、単なる連番ではなく値はビットフラグになります。
+そして、 `@[Flags]` 属性を付けると、単なる連番ではなく値はビットフラグになります。
 
-// TODO: 例
+また、`enum` にはオートキャストという機能もあります。メソッドの引数の型制約に `enum` を指定して、その引数にシンボルが渡されたときに、自動でシンボルから `enum` へ変換するというものです。シンボルが `enum` として有効な値かどうかはコンパイル時にチェックされるので、普通にシンボルを使う場合よりも安全です。
+
+[source,crystal]
+----
+include::./examples/enum.cr[tag=file]
+----
 
 == メソッド呼び出し
 
@@ -326,6 +334,7 @@ end
   * ジェネリックスの構文
   * C言語と連携のための構文
   * マクロ
+  * アノテーション
 
 などです。
 これらは高度な機能なので、当分は知らなくても問題がないでしょう。
