Redpenを黙らせた

--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -264,7 +264,7 @@ Crystal には `enum` があります。
 
 そして、 `@[Flags]` 属性を付けると、単なる連番ではなく値はビットフラグになります。
 
-また、`enum` にはオートキャストという機能もあります。メソッドの引数の型制約に `enum` を指定して、その引数にシンボルが渡されたときに、自動でシンボルから `enum` へ変換するというものです。シンボルが `enum` として有効な値かどうかはコンパイル時にチェックされるので、普通にシンボルを使う場合よりも安全です。
+また、`enum` にはオートキャストという機能もあります。引数の型制約に `enum` を指定して、シンボルが渡されたときに、自動でシンボルから `enum` へ変換するというものです。シンボルが `enum` として有効な値かどうかはコンパイル時にチェックされるので、普通にシンボルを使う場合よりも安全です。
 
 [source,crystal]
 ----
