* のエスケープミス対応

--- a/05-shards/content.adoc
+++ b/05-shards/content.adoc
@@ -781,7 +781,7 @@ include::examples/spec_error.txt[]
 
 ==== テストケースの実行結果サマリ（1行目）
 
-テストケースの実行結果には成功（`.`）、不合格（`F`）、エラー（`E`）、ペンディング（`\*`）の4種類があります。テストの実行結果では、先頭行にテストケースの数だけ実行結果に対応した文字が並んで表示されます。もしテストを実行したのがカラー表示対応のターミナルであれば `.` は緑、`F` と `E` が赤、`\*` が黄色で表示されているかもしれません。
+テストケースの実行結果には成功（`.`）、不合格（`F`）、エラー（`E`）、ペンディング（`\*`）の4種類があります。テストの実行結果では、先頭行にテストケースの数だけ実行結果に対応した文字が並んで表示されます。もしテストを実行したのがカラー表示対応のターミナルであれば `.` は緑、`F` と `E` が赤、`*` が黄色で表示されているかもしれません。
 
 ここで表示される実行結果が全て `.` になっていれば、テストに合格できたことになります。
 
