fix typo def_equales -> def_equals

--- a/04-macro/content.adoc
+++ b/04-macro/content.adoc
@@ -112,7 +112,7 @@ expansion 1:
 
 Crystal には、標準で搭載されているマクロがあります。便利なものが多いのでいくつかご紹介します。`crystal tool expand` を用いれば内容を把握できます。また、公式の API ドキュメントの各マクロの説明には、そのマクロの定義へのリンクがあるので、興味のある方は確認してみてください。
 
-=== `def_equales`
+=== `def_equals`
 
 オブジェクトの同値性比較を行う `==` メソッドを定義します。同値性比較を行う場合、複数あるインスタンス変数の比較を行います。通常の場合、コードは次のようになります。
 
