--- a/02-getting-started/content.adoc
+++ b/02-getting-started/content.adoc
@@ -205,7 +205,10 @@ $ crystal -v
 
 [source,console]
 ----
-Crystal 0.26.1 (2018-08-27)
+Crystal 0.27.2 (2019-02-05)
+
+LLVM: 6.0.1
+Default target: x86_64-apple-macosx
 ----
 
 といったバージョン情報が表示されます。もし「コマンドが見つからない」といったエラーが表示された場合は、
