--- a/colophon.adoc
+++ b/colophon.adoc
@@ -1,8 +1,10 @@
 [colophon]
 = 奥付
 
+2018年10月8日 第1版第1刷発行
+2019年4月14日 第2版第1刷発行
+
 発行誌名 :: Introducing Crystal Programming Language
-発行日 :: 2018年10月8日
 発行者名 :: Crystal-JP
 印刷会社 :: 有限会社ねこのしっぽ
 [suppress='SuggestExpression']
