Follow redpen 1.10.4 lint error `ValidationError[InvalidExpression], 不正な表現 "することができ" がみつかりました。`

--- a/03-syntax/content.adoc
+++ b/03-syntax/content.adoc
@@ -48,7 +48,7 @@ include::./examples/example1.rb[]
 これは Crystal のプログラムです。
 
 メソッドの引数に型を指定しているところに注目してください。
-引数の型でメソッドをオーバーロードすることができます。
+引数の型でメソッドをオーバーロードできます。
 これは Ruby ではできません。
 
 [source,crystal]
@@ -128,7 +128,7 @@ include::./examples/number.cr[]
 
 === 空の配列と空のハッシュに対する型指定
 
-空の配列は `[]` 、空のハッシュは `{}` のように書けますが、これだと要素やキーの型が分からないためコンパイルすることができません。
+空の配列は `[]` 、空のハッシュは `{}` のように書けますが、これだと要素やキーの型が分からないためコンパイルできません。
 そこで Crystal では、空のリテラルに `of 型` と続けることで型を指定します。
 ハッシュの場合は `of キーの型 => 値の型` になります。
 
@@ -240,7 +240,7 @@ Crystal ではインスタンス変数・クラス変数の型がコンパイル
 しかし、そうでない場合は型が分からずにコンパイルエラーになることがあります。
 その場合は明示的にインスタンス変数の型を指定してください。
 
-また、メソッドの引数名としてインスタンス変数を指定すると、メソッドの呼び出しと同時に、そのインスタンス変数に代入することができます。
+また、メソッドの引数名としてインスタンス変数を指定すると、メソッドの呼び出しと同時に、そのインスタンス変数に代入できます。
 
 [source,crystal]
 ----
