--- a/07-cli-development/content.adoc
+++ b/07-cli-development/content.adoc
@@ -300,7 +300,7 @@ $ ./bin/myecho --version
 0.1.0
 ----
 
-`--version` でもバージョンを表示することができました。このように、 `OptionParser` は、コマンドラインオプションを柔軟に扱えます。
+`--version` でもバージョンを表示できました。このように、 `OptionParser` は、コマンドラインオプションを柔軟に扱えます。
 
 == ヘルプ表示のオプション `-h` `--help` を実装する
 
@@ -631,7 +631,7 @@ pre_foo pre_bar pre_baz
 include::./projects/myecho_clim/src/myecho_clim.cr[]
 ----
 
-`desc` や `option` などの定義が１行で書けます。`version` マクロも用意しました。コマンドの実行箇所は、 `run` ブロックになります。サブコマンドも対応しており、直感的に記述することができます。詳しくはマニュアルを御覧ください。
+`desc` や `option` などの定義が１行で書けます。`version` マクロも用意しました。コマンドの実行箇所は、 `run` ブロックになります。サブコマンドも対応しており、直感的に記述できます。詳しくはマニュアルを御覧ください。
 
 実際に実行すると次のようになります。
 
