--- a/05-shards/content.adoc
+++ b/05-shards/content.adoc
@@ -122,7 +122,7 @@ include::projects/simple_html/shard.yml[]
 [suppress='InvalidSymbol']
 ==== 使いたい shard のバージョン指定する
 
-2018年9月時点の `html_builder` はバージョン `0.2.2` が最新です。そのため、バージョン指定をせず shard をインストールした場合には最新のバージョン `0.2.2` がインストールされます。しかし、`shard.yml` では、インストールする shard のバージョンを指定することもできます。例えば、`shard.yml` での記述を以下のようにすると、旧バージョンの `0.2.1` をインストールすることができます。
+2018年9月時点の `html_builder` はバージョン `0.2.2` が最新です。そのため、バージョン指定をせず shard をインストールした場合には最新のバージョン `0.2.2` がインストールされます。しかし、`shard.yml` では、インストールする shard のバージョンを指定することもできます。例えば、`shard.yml` での記述を以下のようにすると、旧バージョンの `0.2.1` をインストールできます。
 
 [source,yaml]
 .バージョン指定付きの `shard` 設定
@@ -661,7 +661,7 @@ include::examples/spec_success.txt[]
 
 先の例で登場した `describe` もグルーピング用ブロックの1種です。`describe` ブロックはテスト対象を元にしたグルーピングを行うもので、テスト対象として型（クラス、モジュールなど）やメソッド名（文字列で指定）を引数として与えることができます。この引数はテスト不合格時の出力メッセージでも利用されるため、テスト対象となるメソッド名に準じた構成をとることが強く推奨されています。例えば、外側の `describe` では型を指定し、内側の `describe` にメソッド名を渡すような形です。またこのときのメソッド名に、クラスメソッドであれば `.` を、インスタンスメソッドであれば `#` を先頭に付けておくと、`Class #method` のように準的なメソッド表記に近い形を再現できます。
 
-Crystal の spec ファイルでは、グルーピング用のブロックとして `describe` 以外にもう1つ `context` が使用可能です。`describe` ブロックがテスト対象をもとにしたグルーピングだとすると、`context` ブロックはその時の状況（条件）によるグルーピングです。例えば、配列が要素を含んでいるか否かで挙動が異なる場合に、それぞれの状況を明示することができます。
+Crystal の spec ファイルでは、グルーピング用のブロックとして `describe` 以外にもう1つ `context` が使用可能です。`describe` ブロックがテスト対象をもとにしたグルーピングだとすると、`context` ブロックはその時の状況（条件）によるグルーピングです。例えば、配列が要素を含んでいるか否かで挙動が異なる場合に、それぞれの状況を明示できます。
 
 [source,crystal]
 .`describe` と `context`
@@ -833,7 +833,7 @@ include::examples/spec_error.txt[]
 
 === crystal spec コマンドのパラメータ
 
-テストを実行する `crystal spec` コマンドには、spec ファイル名以外のパラメータを指定することができます。適切なパラメータを与えることで、ディレクトリ単位や spec ファイル単位、さらには特定のテストケース単位でのテストを実行可能です。
+テストを実行する `crystal spec` コマンドには、spec ファイル名以外のパラメータを指定できます。適切なパラメータを与えることで、ディレクトリ単位や spec ファイル単位、さらには特定のテストケース単位でのテストを実行可能です。
 
 .crystal spec コマンドへのパラメータ指定
 
